# user-management-system

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json  release-plz.toml  users.json
.github/workflows/: release-please.yml  release-plz.yaml  release.yaml
user-cli/: CHANGELOG.md  Cargo.toml
user-cli/src/: main.rs
user-lib/: CHANGELOG.md  Cargo.toml
user-lib/src/: lib.rs
