
[package]
name = "user-management-system"
version = "0.1.0"
edition = "2021"
description = "A user management system with library and CLI components"

[workspace]
resolver = "2"
members = [
    "user-lib",
    "user-cli"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
