
[workspace]
resolver = "2"
members = [
    "user-lib",
    "user-cli"
]

[workspace.package]
version = "0.1.2"
authors = ["Nabil Tounarti <nabil.tounarti@iex.ec>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nabil-Tounarti/user-management-system"
homepage = "https://github.com/nabil-Tounarti/user-management-system"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
