
[package]
name = "user-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "User management CLI tool"

[[bin]]
name = "user-cli"
path = "src/main.rs"

[dependencies]
user-lib = { path = "../user-lib" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
